# cpp-OpenCV

./: .gitignore
OpenCV/: CMakeLists.txt  CMakePresets.json
OpenCV/src/: BitGrid.cpp  BitGrid.h  EdgeDetector.cpp  EdgeDetector.h  TFLiteDetector.cpp  TFLiteDetector.h  main.cpp
cpp-OpenCV/: CMakeLists.txt  CMakePresets.json
cpp-OpenCV/Camera/: CMakeLists.txt  WebcamViewer.h  main.cpp
cpp-OpenCV/src/: WebcamViewer.h  global.cpp  main.cpp  yolo.cpp  yolo.h
